--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,6 @@
-asgiref==3.9.1
-Brotli==1.1.0
-cffi==2.0.0
-cryptography==45.0.7
-cssselect2==0.8.0
-Django==5.2.6
-et_xmlfile==2.0.0
-fonttools==4.59.2
-numpy==2.3.3
-openpyxl==3.1.5
-pandas==2.3.2
-pillow==11.3.0
-psycopg2-binary==2.9.10
-pycparser==2.23
-pydyf==0.11.0
-pyphen==0.17.2
-python-dateutil==2.9.0.post0
+cryptography==46.0.2
+Django==5.2.7
+docx==0.2.4
+pandas==2.3.3
 python-dotenv==1.1.1
-pytz==2025.2
-six==1.17.0
-sqlparse==0.5.3
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-tzdata==2025.2
 weasyprint==66.0
-webencodings==0.5.1
-zopfli==0.2.3.post1
